fix: make debounced send to osc (becaue high rate trackers can report too much for vrc-osc)

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ html {
   user-select: none; /* Standard syntax */
 }
 
-html, body {
+html, body, div#js-root {
   width: 100%;
+  height: 280px;
 }
